[package]
name = "market-data"
version = "0.1.0"
description = "A Rust lib to fetch & enhance historical time-series stock market data"
keywords = ["stock market", "stock", "equities", "historical time-series"]
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danrusei/market-data"
documentation = "https://docs.rs/market-data"
readme = "README.md"
licence = "Apache-2.0"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.34", features = ["serde"] }
reqwest = {version="0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
url = "2.5.0"


[dev-dependencies]
anyhow = "1.0.80"
lazy_static = "1.4.0"

[[example]]
name = "series_from_iexcloud"
path = "examples/series_from_iexcloud.rs"

[[example]]
name = "series_from_alphavantage"
path = "examples/series_from_alphavantage.rs"

[[example]]
name = "series_from_twelvedata"
path = "examples/series_from_twelvedata.rs"