[package]
name = "market-data"
version = "0.2.0"
description = "A Rust lib to fetch & enhance historical time-series stock market data"
keywords = ["stock_time-series", "market-data", "equities_data"]
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danrusei/market-data"
documentation = "https://docs.rs/market-data"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE"
edition = "2021"
exclude = [".github/*",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use-sync"]
use-sync = ["ureq"]
use-async = ["reqwest"]

[dependencies]
chrono = {version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
url = "2.5.0"

ureq = {version="2.9.6", optional = true, features = ["json"] }
reqwest = {version="0.11.24", optional = true, features = ["json"] }

[dev-dependencies]
anyhow = "1.0.80"
lazy_static = "1.4.0"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "series_iexcloud"
path = "examples/series_iexcloud.rs"
required-features = ["use-sync"]

[[example]]
name = "series_alphavantage"
path = "examples/series_alphavantage.rs"
required-features = ["use-sync"]

[[example]]
name = "series_twelvedata"
path = "examples/series_twelvedata.rs"
required-features = ["use-sync"]

[[example]]
name = "async_series_twelvedata"
path = "examples/async_series_twelvedata.rs"
required-features = ["use-async"]
