[package]
name = "market-data"
version = "0.5.0"
description = "A Rust lib to fetch & enhance historical time-series stock market data"
keywords = ["stock_time-series", "market-data", "equities_data"]
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danrusei/market-data"
documentation = "https://docs.rs/market-data"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
exclude = [".github/*",]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
anyhow = "1.0.101"
lazy_static = "1.4.0"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "series_alphavantage"
path = "examples/series_alphavantage.rs"

[[example]]
name = "series_twelvedata"
path = "examples/series_twelvedata.rs"

[[example]]
name = "series_finnhub"
path = "examples/series_finnhub.rs"

[[example]]
name = "series_massive"
path = "examples/series_massive.rs"

[[example]]
name = "series_yahoo_finance"
path = "examples/series_yahoo_finance.rs"
